# docs/swagger.json
@@ -84,7 +84,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/v1.LoginRequest"
+                            "$ref": "#/definitions/github_com_Template7_backend_api_types.HttpLoginReq"
                         }
                     }
                 ],
@@ -133,7 +133,6 @@
             "type": "object",
             "required": [
                 "password",
-                "role",
                 "username"
             ],
             "properties": {
@@ -150,12 +149,28 @@
                     "example": "password"
                 },
                 "role": {
-                    "allOf": [
-                        {
-                            "$ref": "#/definitions/v1.Role"
-                        }
+                    "type": "string",
+                    "enum": [
+                        "admin"
                     ],
-                    "example": 0
+                    "example": "user"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "username"
+                }
+            }
+        },
+        "github_com_Template7_backend_api_types.HttpLoginReq": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string",
+                    "example": "password"
                 },
                 "username": {
                     "type": "string",
@@ -225,20 +240,12 @@
                             "example": "example"
                         },
                         "role": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/v1.Role"
-                                }
-                            ],
-                            "example": 0
+                            "type": "string",
+                            "example": "user"
                         },
                         "status": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/v1.AccountStatus"
-                                }
-                            ],
-                            "example": 0
+                            "type": "string",
+                            "example": "activated"
                         },
                         "userId": {
                             "type": "string",
@@ -268,45 +275,6 @@
                     "example": "2021-07-24T20:01:25.874565+08:00"
                 }
             }
-        },
-        "v1.AccountStatus": {
-            "type": "integer",
-            "enum": [
-                0,
-                1,
-                2
-            ],
-            "x-enum-varnames": [
-                "AccountStatus_Blocked",
-                "AccountStatus_Initialized",
-                "AccountStatus_Activated"
-            ]
-        },
-        "v1.LoginRequest": {
-            "type": "object",
-            "properties": {
-                "password": {
-                    "description": "password",
-                    "type": "string"
-                },
-                "username": {
-                    "description": "username",
-                    "type": "string"
-                }
-            }
-        },
-        "v1.Role": {
-            "type": "integer",
-            "enum": [
-                0,
-                1,
-                2
-            ],
-            "x-enum-varnames": [
-                "Role_Admin",
-                "Role_Operator",
-                "Role_User"
-            ]
         }
     }
 }
